--- a/source/sass/components/form/form.scss
+++ b/source/sass/components/form/form.scss
@@ -15,6 +15,7 @@
   &--color {
     background-color: $frame;
     margin-bottom: 25px;
+    list-style-type: none;
 
     @media (min-width: $tablet-width) {
       display: flex;
@@ -41,7 +42,7 @@
 
   @media (min-width: $desktop-width) {
     padding: 0 225px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
   }
 }
 
@@ -86,7 +87,6 @@
   padding-right: 23px;
   width: auto;
 
-
   @media (min-width: $tablet-width) {
     margin-left: 30px;
 
@@ -115,7 +115,6 @@
     &--extra {
       padding-top: 34px;
     }
-
   }
 
   @media (min-width: $desktop-width) {
@@ -141,8 +140,6 @@
 
     &--email {
       padding-top: 22px;
-      // padding-left: 63px;
-      // padding-top: 34px;
       padding-left: 0;
       padding-right: 12px;
       margin-left: 93px;
@@ -186,15 +183,7 @@
 .form__input {
   display: block;
   margin: 0;
-  font-family: "Open Sans", Arial, sans-serif;
-
-  &--phone {
-    background-color: $frame;
-  }
-
-  &--email {
-    background-color: $frame;
-  }
+  font-family: "Open Sans", "Arial", sans-serif;
 
   &:active {
     outline: 0;
@@ -233,10 +222,6 @@
   margin-bottom: 9px;
 }
 
-.form__item {
-  list-style-type: none;
-}
-
 .form__input--text {
   width: 100%;
   border: none;
@@ -264,17 +249,17 @@
     position: absolute;
     width: 25px;
     height: 24px;
-    background-image: url("../../../img/icons/phone.svg");
+    background-image: url("../img/icons/phone.svg");
     right: 9px;
     top: 9px;
   }
 
   &:hover::after {
-    background-image: url("../../../img/icons/phone-hover.svg");
+    background-image: url("../img/icons/phone-hover.svg");
   }
 
   &:active::after {
-    background-image: url("../../../img/icons/phone-hover.svg");
+    background-image: url("../img/icons/phone-hover.svg");
   }
 
   @media (min-width: $tablet-width) {
@@ -336,17 +321,17 @@
     position: absolute;
     width: 32px;
     height: 21px;
-    background-image: url("../../../img/icons/mail.svg");
+    background-image: url("../img/icons/mail.svg");
     right: 5px;
     top: 14px;
   }
 
   &:hover::after {
-    background-image: url("../../../img/icons/mail-hover.svg");
+    background-image: url("../img/icons/mail-hover.svg");
   }
 
   &:active::after {
-    background-image: url("../../../img/icons/mail-hover.svg");
+    background-image: url("../img/icons/mail-hover.svg");
   }
 
   @media (min-width: $tablet-width) {
@@ -414,7 +399,7 @@
 
   resize: none;
   overflow: auto;
-  background-color: white;
+  background-color: $white;
 
   &:focus {
     outline: none;
