--- a/source/sass/components/index/page-main-header.scss
+++ b/source/sass/components/index/page-main-header.scss
@@ -51,7 +51,7 @@
       background-repeat: no-repeat;
       background-position: 50% 95%;
       background-size: auto 746px;
-      margin-top: 0px;
+      margin-top: 0;
       margin-bottom: 19px;
 
       @media (min-resolution: 2dppx) {
@@ -113,7 +113,7 @@
       min-height: 175px;
 
       &::before {
-        bottom: 0px;
+        bottom: 0;
       }
     }
 
