--- a/source/sass/components/catalog/card.scss
+++ b/source/sass/components/catalog/card.scss
@@ -1,10 +1,10 @@
 .card {
   &:hover {
-    box-shadow: 0px 6px 10px 0px #0000001A;
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
   }
 
   &:active {
-    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
   }
 
   @media (min-width: $tablet-width) {
@@ -67,11 +67,11 @@
   margin: 0;
 
   &:hover {
-    color: lighten($headers, 40%)
+    color: lighten($headers, 40%);
   }
 
   &:active {
-    color: lighten($headers, 70%)
+    color: lighten($headers, 70%);
   }
 
   &--toys {
