--- a/source/sass/components/catalog/video.scss
+++ b/source/sass/components/catalog/video.scss
@@ -67,11 +67,11 @@
   border: 1px solid $frame;
 
   &:hover {
-    box-shadow: 0px 6px 10px 0px #0000001A;
+    box-shadow: 0 6px 10px 0 rgba(0, 0, 0, 0.1);
   }
 
   &:active {
-    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
   }
 
   @media (min-width: $tablet-width) {
@@ -101,7 +101,7 @@
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 4;
-    margin-bottom: 0px;
+    margin-bottom: 0;
   }
 }
 
@@ -116,8 +116,6 @@
   padding: 0;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 
   &::before {
@@ -151,8 +149,6 @@
   padding: 0;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
 
