--- a/source/sass/components/form/type.scss
+++ b/source/sass/components/form/type.scss
@@ -51,7 +51,7 @@
   }
 }
 
-.form__input--radio+label::before {
+.form__input--radio + label::before {
   content: "";
   position: absolute;
   left: -1px;
@@ -74,15 +74,15 @@
   }
 }
 
-.form__input--radio+label:hover::before {
+.form__input--radio + label:hover::before {
   border: 2px solid $brand-stroke;
 }
 
-.form__input--radio+label:active::before {
+.form__input--radio + label:active::before {
   border: 2px solid lighten($headers, 70%);
 }
 
-.form__input--radio:checked+label::after {
+.form__input--radio:checked + label::after {
   content: "";
   position: absolute;
   left: 9px;
