--- a/source/sass/components/index/header.scss
+++ b/source/sass/components/index/header.scss
@@ -1,6 +1,5 @@
 .header {
   background-color: $white;
-  // width: 100%;
   max-width: 1150px;
   display: block;
   z-index: 10;
@@ -22,7 +21,7 @@
 
   @media (min-width: $desktop-width) {
     max-width: 1150px;
-    margin-bottom: 0px;
+    margin-bottom: 0;
   }
 }
 
@@ -94,12 +93,12 @@
 }
 
 .main-nav--opened .main-nav__list {
-  background-color: white;
+  background-color: $white;
   z-index: 1000;
 }
 
 .main-nav--opened .menu-main__item {
-  background-color: white;
+  background-color: $white;
   position: relative;
   z-index: 1000;
 }
@@ -130,8 +129,6 @@
   padding: 0;
   top: 50%;
   left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 
   @media (min-width: $tablet-width) {
@@ -248,9 +245,6 @@
       height: 1px;
       background-color: lighten($headers, 90%);
     }
-
-
-
   }
 
   @media (min-width: $desktop-width) {
@@ -262,7 +256,7 @@
   font-size: 17px;
   line-height: 24px;
   font-weight: 700;
-  padding: 23px 0 30px 0px;
+  padding: 23px 0 30px 0;
 
   @media (min-width: $tablet-width) {
     border-top: none;
@@ -356,7 +350,6 @@
       width: 100%;
       height: 1px;
       background-color: lighten($headers, 90%);
-
     }
   }
 
@@ -441,6 +434,10 @@
 }
 
 .main-nav--opened .main-nav__toggle {
+  &::before {
+    transform: rotate(45deg);
+    box-shadow: none;
+  }
 
   &::before,
   &::after {
@@ -451,11 +448,6 @@
     width: 30px;
     height: 2px;
     background-color: #000000;
-  }
-
-  &::before {
-    transform: rotate(45deg);
-    box-shadow: none;
   }
 
   &::after {
