--- a/source/sass/global/modal.scss
+++ b/source/sass/global/modal.scss
@@ -26,11 +26,10 @@
   width: 320px;
   background-color: $white;
   padding: 28px 30px 47px;
-
   margin: 0 auto;
   border-top: 1px solid $modal;
   border-bottom: 1px solid $modal;
-  box-shadow: 0px 5px 10px 0px rgba(0, 1, 1, 0.251);
+  box-shadow: 0 5px 10px 0 rgba(0, 1, 1, 0.25);
 
   @media (min-width: $tablet-width) {
     width: 566px;
@@ -86,7 +85,6 @@
 
 .modal__contaner {
   padding: 0;
-  margin: 0;
   border: none;
   display: flex;
   flex-wrap: wrap;
@@ -111,16 +109,13 @@
   padding-bottom: 16px;
   box-sizing: border-box;
   border: 2px solid $main-text;
-}
-
-.modal__input:checked+.modal__size {
-  border: 2px solid $brand-fill-main;
-}
-
-.modal__size {
   display: block;
   margin: 0 auto;
   text-align: center;
+}
+
+.modal__input:checked + .modal__size {
+  border: 2px solid $brand-fill-main;
 }
 
 .modal__item:nth-last-child(n+2) {
