--- a/source/sass/components/form/form.scss
+++ b/source/sass/components/form/form.scss
@@ -1,6 +1,7 @@
 .form {
   margin-bottom: 55px;
   margin-left: 30px;
+  margin-right: 30px;
 
   @media (min-width: $mobile-tablet-width) {
     margin: 0 75px;
@@ -29,7 +30,7 @@
   }
 }
 
-.form__explanation {
+.page-main__explanation {
   font-size: 13px;
   line-height: 24px;
   margin-bottom: 7px;
