--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,7 +3,7 @@
 @import "global/variables";
 @import "global/mixins";
 @import "global/global";
-@import "global/main";
+@import "global/page-main";
 @import "global/modal";
 
 // components
