--- a/source/sass/components/form/form.scss
+++ b/source/sass/components/form/form.scss
@@ -13,20 +13,31 @@
 }
 
 .form__item {
+  list-style-type: none;
+
   &--color {
-    background-color: $frame;
     margin-bottom: 25px;
-    list-style-type: none;
 
     @media (min-width: $tablet-width) {
-      display: flex;
-      padding: 0 20px;
+      background-color: $frame;
     }
   }
 
   @media (min-width: $tablet-width) {
-    display: flex;
     padding: 0 20px;
+  }
+}
+
+.fort__item-wrap {
+  @media (min-width: $tablet-width) {
+    display: flex;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+
+    width: 1109px;
+    margin: 0 auto;
   }
 }
 
@@ -210,7 +221,7 @@
   font-size: 17px;
   line-height: 18px;
   display: block;
-  color: lighten($headers, 70%);
+  color: rgba(0, 0, 0, 0.3);
 
   @media (min-width: $tablet-width) {
     font-size: 19px;
@@ -278,6 +289,11 @@
     padding-left: 16px;
     padding-right: 170px;
     margin-bottom: 19px;
+
+    &::after {
+      right: 182px;
+      top: 3px;
+    }
   }
 }
 
@@ -350,6 +366,11 @@
     padding-left: 2px;
     padding-right: 172px;
     margin-bottom: 85px;
+
+    &::after {
+      right: 180px;
+      top: 19px;
+    }
   }
 }
 
