--- a/source/sass/components/index/header.scss
+++ b/source/sass/components/index/header.scss
@@ -1,37 +1,58 @@
 .header {
   background-color: $white;
-  max-width: 1150px;
+  width: 100%;
   display: block;
   z-index: 10;
   min-width: 320px;
   min-height: 79px;
   margin: 0 auto;
-  border-top: 1px solid lighten($headers, 90%);
-  border-bottom: 1px solid lighten($headers, 90%);
+  border-top: 1px solid $lines;
+  border-bottom: 1px solid $lines;
 
   @media (min-width: $tablet-width) {
     min-height: 89px;
     border: none;
-    margin-bottom: -11px;
+    background-color: $fill-main;
+
+    &::before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 86px;
+      border-bottom: 1px solid $lines;
+      background-color: $white;
+      z-index: -5;
+    }
 
     @media (min-width: $tablet-width) {
       width: 100%;
     }
+
+    &--index {
+      background-color: $white;
+
+      &::before {
+        top: 86px;
+        height: 0;
+        z-index: 5;
+      }
+    }
   }
 
   @media (min-width: $desktop-width) {
-    max-width: 1150px;
     margin-bottom: 0;
   }
 }
 
 .main-nav__titles {
   &:hover {
-    color: lighten($headers, 40%);
+    color: rgba(0, 0, 0, 0.6);
   }
 
   &:active {
-    color: lighten($headers, 70%);
+    color: rgba(0, 0, 0, 0.3);
   }
 }
 
@@ -41,6 +62,10 @@
   height: 100%;
   margin: 0 auto;
   background-color: transparent;
+
+  @media (min-width: $desktop-width) {
+    max-width: 1150px;
+  }
 }
 
 .main-nav {
@@ -71,7 +96,6 @@
     display: flex;
   }
 }
-
 
 .main-nav--open .main-nav__list {
   display: block;
@@ -120,16 +144,14 @@
   height: 79px;
 }
 
-
-
-
 .main-nav__logo-wrap {
   height: 100%;
   position: relative;
 
   @media (min-width: $tablet-width) {
     margin-right: auto;
-    width: auto;
+    background-color: $white;
+    width: 200px;
     height: auto;
     padding: 0 50px;
     order: 1;
@@ -190,14 +212,14 @@
 .menu-main {
   @include ul-style;
 
-
   @media (min-width: $tablet-width) {
     display: flex;
     flex-wrap: wrap;
+    min-width: 51%;
     flex-grow: 1;
     order: 3;
-    background-color: $fill-main;
     padding-left: 50px;
+    position: relative;
 
     &--index {
       background-color: $white;
@@ -207,7 +229,12 @@
   @media (min-width: $desktop-width) {
     order: 1;
     flex-grow: 0;
+    min-width: 100px;
     background-color: $white;
+
+    &::before {
+      height: 0;
+    }
   }
 }
 
@@ -233,7 +260,7 @@
     padding: 32px 70px 5px 0;
 
     &--catalog {
-      border-right: 1px solid lighten($headers, 90%);
+      border-right: 1px solid $lines;
       padding-right: 36px;
     }
 
@@ -255,16 +282,6 @@
     display: flex;
     flex-wrap: wrap;
     order: 2;
-
-    &::after {
-      content: "";
-      position: absolute;
-      bottom: -1px;
-      right: 0;
-      width: 100%;
-      height: 1px;
-      background-color: lighten($headers, 90%);
-    }
   }
 
   @media (min-width: $desktop-width) {
@@ -284,8 +301,8 @@
 
     &--search {
       padding: 34px 31px 24px;
-      border-right: 1px solid lighten($headers, 90%);
-      border-left: 1px solid lighten($headers, 90%);
+      border-right: 1px solid $lines;
+      border-left: 1px solid $lines;
     }
 
     &--cart {
@@ -359,29 +376,12 @@
   @media (min-width: $desktop-width) {
     display: flex;
     flex-wrap: wrap;
-    order: 2;
-    position: relative;
-
-    &::before {
-      content: "";
-      position: absolute;
-      top: -1px;
-      left: 0;
-      width: 100%;
-      height: 1px;
-      background-color: lighten($headers, 90%);
-    }
-  }
-
-  @media (min-width: $desktop-width) {
-    display: flex;
     padding: 23px 0;
     order: 4;
     width: 50%;
     padding-left: 50px;
-    background-color: $fill-main;
-
     flex-grow: 1;
+    position: relative;
 
     &--index {
       background-color: $white;
@@ -402,7 +402,6 @@
 
   @media (min-width: $tablet-width) {
     display: block;
-    background-color: $fill-main;
     padding: 20px 0 19px 0;
     order: 5;
     padding-right: 50px;
