--- a/source/sass/components/index/page-main-header.scss
+++ b/source/sass/components/index/page-main-header.scss
@@ -4,14 +4,13 @@
   background-color: $fill-main;
   position: relative;
 
-
   @media (min-width: $tablet-width) {
     &::before {
       content: "";
       position: absolute;
       left: 0;
       bottom: -14px;
-      width: 770px;
+      width: 100%;
       height: 24px;
       background-image: url("../img/icons/zigzag-fill-tablet.svg");
       z-index: 20;
@@ -21,10 +20,12 @@
 
   @media (min-width: $desktop-width) {
     &::before {
-      bottom: -9px;
+      bottom: -17px;
+      left: 13px;
       width: 100%;
-      height: 24px;
-      background-image: url("../img/icons/zigzag-fill-desktop.svg");
+      height: 34px;
+      fill: "ffffff";
+      background-image: url("../img/icons/zigzag-line-desktop.svg");
       background-repeat: repeat-x;
     }
   }
@@ -61,7 +62,6 @@
     }
 
     @media (min-width: $desktop-width) {
-
       min-height: 678px;
       background-image: url("../img/index/hero-tablet.jpg");
       background-position: 50% 100%;
@@ -84,7 +84,7 @@
 
     @media (min-width: $tablet-width) {
       margin-bottom: 80px;
-      min-height: 164px;
+      min-height: 153px;
 
       &::before {
         bottom: -12px;
@@ -110,7 +110,8 @@
 
     @media (min-width: $tablet-width) {
       margin-bottom: 53px;
-      min-height: 175px;
+      min-height: 164px;
+      width: 100%;
 
       &::before {
         bottom: 0;
