--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -12,6 +12,7 @@ $fill-main: #f1f1f1;
 $frame: #ececec;
 $social: #231f20;
 $modal: #c6c6c6;
+$lines: rgba(0, 0, 0, 0.1);
 
 $mobile-width: 321px;
 $mobile-width-only: 320px;
