change after first  verification + placeholder

--- a/source/sass/components/form/form.scss
+++ b/source/sass/components/form/form.scss
@@ -221,6 +221,7 @@
   font-size: 17px;
   line-height: 18px;
   display: block;
+  opacity: 1;
   color: rgba(0, 0, 0, 0.3);
 
   @media (min-width: $tablet-width) {
