--- a/source/sass/components/index/page-main-header.scss
+++ b/source/sass/components/index/page-main-header.scss
@@ -22,9 +22,10 @@
     &::before {
       bottom: -17px;
       left: 13px;
-      width: 100%;
+      width: calc(100% - 13px);
       height: 34px;
       fill: "ffffff";
+      object-fit: cover;
       background-image: url("../img/icons/zigzag-line-desktop.svg");
       background-repeat: repeat-x;
     }
@@ -32,7 +33,7 @@
 
   &--index {
     min-height: 490px;
-    background-color: $white;
+    background-color: #f9f9f9;
     background-image: url("../img/index/hero-mobile@2x.jpg");
     background-repeat: no-repeat;
     background-position: 50% -14%;
